fix input border misalign

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -167,7 +167,7 @@ textarea {
   width: 100%;
   resize: none;
   outline: none;
-  border: 1px solid #a3a3a3;
+  border: 2px solid #a3a3a3;
   height: 10rem;
   text-align: start;
 }
